crates/wac-parser/tests/resolution/fail/mismatched-err-result-type.wac
import x: interface {
    f: func() -> result<_, string>;
};

let i = new foo:bar { x };
